package cn.zhanghub.designPattern.principle.UML;

public class PersonServiceBean {
	private PersonDao personDao;// 类

	public void save(Person person) {
	}

	public IDCard getIDCard(Integer personid) {
		return null;
	}

	public void modify() {
		Department department = new Department();
	}
}

class PersonDao {
}

class IDCard {
}

class Person {
}

class Department {
}
